# SA-SC-Project

./: .gitignore  Dockerfile  README.md  app.py  cif2txt.py  docker-compose.yml  plotter.py  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
cif2txt/: __init__.py  bruker_raw.py  xrd_sim.py
frontend/: index.html  nginx.conf  package.json
frontend/public/: enterprise.html  lab.html
frontend/public/qhse/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  index.html  readme.md  styles.css
frontend/public/qhse/components/brand/: GridBackground.d.ts  GridBackground.jsx  GridBackground.prompt.md  grid.card.html
frontend/public/qhse/components/core/: Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  Eyebrow.d.ts  Eyebrow.jsx  Eyebrow.prompt.md  core.card.html
frontend/public/qhse/components/data/: Stat.d.ts  Stat.jsx  (+2 more)
frontend/public/qhse/guidelines/: brand-logo.card.html  colors-accent.card.html  colors-grades.card.html  colors-status.card.html  colors-surfaces.card.html  colors-text.card.html  colors-viz.card.html  effects-elevation.card.html  spacing-radii.card.html  spacing-scale.card.html  type-body.card.html  type-display.card.html  type-mono.card.html
frontend/public/qhse/tokens/: colors.css  effects.css  fonts.css  spacing.css  typography.css
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DatasetManager.tsx  FileUpload.tsx  PlotCanvas.tsx  SettingsPanel.tsx
frontend/src/types/: index.ts
(+18 files in other folders)
